// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UseCarousel jump() should jump to 0 1`] = `-0`;

exports[`UseCarousel jump() should jump to 1 1`] = `-20`;

exports[`UseCarousel jump() should jump to 2 1`] = `-40`;

exports[`UseCarousel jump() should jump to 3 1`] = `-60`;

exports[`UseCarousel jump() should jump to 4 1`] = `-80`;

exports[`UseCarousel move() it should return the coordinate (-2.444 - currentCoordinate) for each item in the carousel [swipe right to left] 1`] = `
Object {
  "coordinate": -2.444,
  "direction": 1,
  "percentage": 14.667,
}
`;

exports[`UseCarousel move() it should return the coordinate (-2.444 - currentCoordinate) for each item in the carousel [swipe right to left] 2`] = `
Object {
  "coordinate": -19.111,
  "direction": 1,
  "percentage": 14.667,
}
`;

exports[`UseCarousel move() it should return the coordinate (-2.444 - currentCoordinate) for each item in the carousel [swipe right to left] 3`] = `
Object {
  "coordinate": -35.778,
  "direction": 1,
  "percentage": 14.667,
}
`;

exports[`UseCarousel move() it should return the coordinate (-2.444 - currentCoordinate) for each item in the carousel [swipe right to left] 4`] = `
Object {
  "coordinate": -52.444,
  "direction": 1,
  "percentage": 14.667,
}
`;

exports[`UseCarousel move() it should return the coordinate (-2.444 - currentCoordinate) for each item in the carousel [swipe right to left] 5`] = `
Object {
  "coordinate": -69.111,
  "direction": 1,
  "percentage": 14.667,
}
`;

exports[`UseCarousel move() it should return the coordinate (-2.444 - currentCoordinate) for each item in the carousel [swipe right to left] 6`] = `
Object {
  "coordinate": -85.778,
  "direction": 1,
  "percentage": 14.667,
}
`;

exports[`UseCarousel move() should return the coordinate (-5.333 + currentCoordinate) for each item in the carousel [swipe left to right] 1`] = `
Object {
  "coordinate": 5.333,
  "direction": -1,
  "percentage": 32,
}
`;

exports[`UseCarousel move() should return the coordinate (-5.333 + currentCoordinate) for each item in the carousel [swipe left to right] 2`] = `
Object {
  "coordinate": -11.333,
  "direction": -1,
  "percentage": 32,
}
`;

exports[`UseCarousel move() should return the coordinate (-5.333 + currentCoordinate) for each item in the carousel [swipe left to right] 3`] = `
Object {
  "coordinate": -28,
  "direction": -1,
  "percentage": 32,
}
`;

exports[`UseCarousel move() should return the coordinate (-5.333 + currentCoordinate) for each item in the carousel [swipe left to right] 4`] = `
Object {
  "coordinate": -44.667,
  "direction": -1,
  "percentage": 32,
}
`;

exports[`UseCarousel move() should return the coordinate (-5.333 + currentCoordinate) for each item in the carousel [swipe left to right] 5`] = `
Object {
  "coordinate": -61.333,
  "direction": -1,
  "percentage": 32,
}
`;

exports[`UseCarousel move() should return the coordinate (-5.333 + currentCoordinate) for each item in the carousel [swipe left to right] 6`] = `
Object {
  "coordinate": -78,
  "direction": -1,
  "percentage": 32,
}
`;

exports[`UseCarousel next() should return the next coordinate of 0 1`] = `-9.090909090909092`;

exports[`UseCarousel next() should return the next coordinate of 1 1`] = `-18.181818181818183`;

exports[`UseCarousel next() should return the next coordinate of 2 1`] = `-27.272727272727273`;

exports[`UseCarousel next() should return the next coordinate of 3 1`] = `-36.36363636363637`;

exports[`UseCarousel next() should return the next coordinate of 4 1`] = `-45.45454545454545`;

exports[`UseCarousel next() should return the next coordinate of 5 1`] = `-54.54545454545455`;

exports[`UseCarousel next() should return the next coordinate of 6 1`] = `-63.63636363636363`;

exports[`UseCarousel next() should return the next coordinate of 7 1`] = `-72.72727272727273`;

exports[`UseCarousel next() should return the next coordinate of 8 1`] = `-81.81818181818181`;

exports[`UseCarousel next() should return the next coordinate of 9 1`] = `-90.9090909090909`;

exports[`UseCarousel next() should return the next coordinate of 10 1`] = `-0`;

exports[`UseCarousel previous() should return the previous coordinate of 0 1`] = `-90.9090909090909`;

exports[`UseCarousel previous() should return the previous coordinate of 1 1`] = `-0`;

exports[`UseCarousel previous() should return the previous coordinate of 2 1`] = `-9.090909090909092`;

exports[`UseCarousel previous() should return the previous coordinate of 3 1`] = `-18.181818181818183`;

exports[`UseCarousel previous() should return the previous coordinate of 4 1`] = `-27.272727272727273`;

exports[`UseCarousel previous() should return the previous coordinate of 5 1`] = `-36.36363636363637`;

exports[`UseCarousel previous() should return the previous coordinate of 6 1`] = `-45.45454545454545`;

exports[`UseCarousel previous() should return the previous coordinate of 7 1`] = `-54.54545454545455`;

exports[`UseCarousel previous() should return the previous coordinate of 8 1`] = `-63.63636363636363`;

exports[`UseCarousel previous() should return the previous coordinate of 9 1`] = `-72.72727272727273`;

exports[`UseCarousel previous() should return the previous coordinate of 10 1`] = `-81.81818181818181`;

exports[`UseCarousel useCarousel() should return the coordinate of 0 1`] = `-0`;

exports[`UseCarousel useCarousel() should return the coordinate of 1 1`] = `-11.11111111111111`;

exports[`UseCarousel useCarousel() should return the coordinate of 2 1`] = `-22.22222222222222`;

exports[`UseCarousel useCarousel() should return the coordinate of 3 1`] = `-33.333333333333336`;

exports[`UseCarousel useCarousel() should return the coordinate of 4 1`] = `-44.44444444444444`;

exports[`UseCarousel useCarousel() should return the coordinate of 5 1`] = `-55.55555555555556`;

exports[`UseCarousel useCarousel() should return the coordinate of 6 1`] = `-66.66666666666667`;

exports[`UseCarousel useCarousel() should return the coordinate of 7 1`] = `-77.77777777777777`;

exports[`UseCarousel useCarousel() should return the coordinate of 8 1`] = `-88.88888888888889`;

exports[`UseCarousel useCarousel() should return the previous coordinate of 0 1`] = `-88.88888888888889`;

exports[`UseCarousel useCarousel() should return the previous coordinate of 1 1`] = `-0`;

exports[`UseCarousel useCarousel() should return the previous coordinate of 2 1`] = `-11.11111111111111`;

exports[`UseCarousel useCarousel() should return the previous coordinate of 3 1`] = `-22.22222222222222`;

exports[`UseCarousel useCarousel() should return the previous coordinate of 4 1`] = `-33.333333333333336`;

exports[`UseCarousel useCarousel() should return the previous coordinate of 5 1`] = `-44.44444444444444`;

exports[`UseCarousel useCarousel() should return the previous coordinate of 6 1`] = `-55.55555555555556`;

exports[`UseCarousel useCarousel() should return the previous coordinate of 7 1`] = `-66.66666666666667`;

exports[`UseCarousel useCarousel() should return the previous coordinate of 8 1`] = `-77.77777777777777`;

exports[`UseCarousel useCarousel() should return the the next coordinate of 0 1`] = `-11.11111111111111`;

exports[`UseCarousel useCarousel() should return the the next coordinate of 1 1`] = `-22.22222222222222`;

exports[`UseCarousel useCarousel() should return the the next coordinate of 2 1`] = `-33.333333333333336`;

exports[`UseCarousel useCarousel() should return the the next coordinate of 3 1`] = `-44.44444444444444`;

exports[`UseCarousel useCarousel() should return the the next coordinate of 4 1`] = `-55.55555555555556`;

exports[`UseCarousel useCarousel() should return the the next coordinate of 5 1`] = `-66.66666666666667`;

exports[`UseCarousel useCarousel() should return the the next coordinate of 6 1`] = `-77.77777777777777`;

exports[`UseCarousel useCarousel() should return the the next coordinate of 7 1`] = `-88.88888888888889`;

exports[`UseCarousel useCarousel() should return the the next coordinate of 8 1`] = `-0`;
